--- a/All produk.html
+++ b/All produk.html
@@ -24,7 +24,7 @@
       crossorigin="anonymous"
     />
     <link
-    href="/css/styles1.css"
+    href="css/styles1.css"
     rel="stylesheet"
     />
   </head>
