--- a/Popular Produk.html
+++ b/Popular Produk.html
@@ -15,7 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"crossorigin="anonymous"/>
       <link
-      href="/css/styles1.css"
+      href="css/styles1.css"
       rel="stylesheet"
     />
     <body>
