--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
             </div>
         </nav>
-        <header class="bg-dark py-5">
+        <header class="bg-dark py-5" style="min-height: unset;">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
                     <h1 class="display-4 fw-bolder">Enjoy Your Story </h1>
