--- a/All produk.html
+++ b/All produk.html
@@ -109,6 +109,9 @@
           </div>
         </div>
       </section>
+      <div class="copyright" style="width: 100wv; padding: 0 2rem; background-color: dimgray;">
+        <h3 style="font-size: 1.5rem;color: white;">Arsya Prima @ 2023</h3>
+      </div>
       <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
       <script src="js/Aproduk.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
