--- a/about.html
+++ b/about.html
@@ -159,8 +159,8 @@
         Figure. Kami berharap Anda menikmati pengalaman berbelanja di toko kami
         dan menemukan action figure yang akan melengkapi koleksi Anda!
       </p>
-      <div class="copyright" style="width: 100wv; padding: 0 2rem; background-color: dimgray;">
-        <h3 style="font-size: 1.5rem;color: white;">Arsya Prima @ 2023</h3>
+      <div class="copyright" style="width: 100wv; padding: .5rem 0; background-color: dimgray;">
+        <h3 style="font-size: 1.5rem;color: white; text-align: center;">Arsya Prima @ 2023</h3>
       </div>
     </body>
   </head>
