--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
               </a>
             </div>    
     </footer>
-    <div class="copyright" style="width: 100wv; padding: 0 2rem; background-color: dimgray;">
-      <h3 style="font-size: 1.5rem;color: white;">Arsya Prima @ 2023</h3>
+    <div class="copyright" style="width: 100wv; padding: .5rem 0; background-color: dimgray;">
+      <h3 style="font-size: 1.5rem;color: white; text-align: center;">Arsya Prima @ 2023</h3>
     </div>
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="js/Iproduk.js"></script>
